--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,11 @@
 {
   "extends": [
-    "config:base"
-  ]
+    "config:base",
+    ":disableDependencyDashboard"
+  ],
+  "labels": [
+    "renovate"
+  ],
+  "commitMessagePrefix": "chore: ",
+  "rebaseWhen": "conflicted"
 }
